kubernetes/namespace.yml
apiVersion: v1
kind: Namespace

metadata:
  name: devops-platform

  labels:
    app.kubernetes.io/name: devops-production-platform
    app.kubernetes.io/part-of: devops-production-platform
