kubernetes/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: devops-platform
  labels:
    app: postgres
    component: database

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres
        component: database

    spec:
      containers:
        - name: postgres

          image: postgres:16
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - devuser
                - -d
                - devdb
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - devuser
                - -d
                - devdb
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
