kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend-service
  namespace: devops-platform

spec:
  selector:
    app: flask-backend

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
