kubernetes/postgres-service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: devops-platform

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432

  type: ClusterIP
