kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flask-backend-ingress
  namespace: devops-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: devops-platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-backend-service
                port:
                  number: 80
